# onion-tasks

./: .coveragerc  README.md  manage.py  pyproject.toml  pytest.ini
adapters/persistence/: apps.py  models.py  repositories.py
adapters/tests/: conftest.py  test_web.py
adapters/web/: views.py
core/entities/: entities.py
frameworks/webapp/webapp/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
tests/: test_entities.py
use_cases/: dtos.py  interfaces.py  test_use_cases.py  use_cases.py
