[project]
name = "onion-tasks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.6",
    "pydeps>=3.0.1",
]

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
    "pytest>=8.4.2",
    "pytest-django>=4.11.1",
]
